; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/cores/pmu/extr_bhnd_pmu.c_bhnd_pmu_enable_regulator_method.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/cores/pmu/extr_bhnd_pmu.c_bhnd_pmu_enable_regulator_method.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bhnd_pmu_softc = type { i32 }

@ENODEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @bhnd_pmu_enable_regulator_method to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bhnd_pmu_enable_regulator_method(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.bhnd_pmu_softc*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call %struct.bhnd_pmu_softc* @device_get_softc(i32 %8)
  store %struct.bhnd_pmu_softc* %9, %struct.bhnd_pmu_softc** %6, align 8
  %10 = load i32, i32* %5, align 4
  switch i32 %10, label %19 [
    i32 128, label %11
  ]

11:                                               ; preds = %2
  %12 = load %struct.bhnd_pmu_softc*, %struct.bhnd_pmu_softc** %6, align 8
  %13 = call i32 @BPMU_LOCK(%struct.bhnd_pmu_softc* %12)
  %14 = load %struct.bhnd_pmu_softc*, %struct.bhnd_pmu_softc** %6, align 8
  %15 = call i32 @bhnd_pmu_paref_ldo_enable(%struct.bhnd_pmu_softc* %14, i32 1)
  store i32 %15, i32* %7, align 4
  %16 = load %struct.bhnd_pmu_softc*, %struct.bhnd_pmu_softc** %6, align 8
  %17 = call i32 @BPMU_UNLOCK(%struct.bhnd_pmu_softc* %16)
  %18 = load i32, i32* %7, align 4
  store i32 %18, i32* %3, align 4
  br label %21

19:                                               ; preds = %2
  %20 = load i32, i32* @ENODEV, align 4
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %19, %11
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local %struct.bhnd_pmu_softc* @device_get_softc(i32) #1

declare dso_local i32 @BPMU_LOCK(%struct.bhnd_pmu_softc*) #1

declare dso_local i32 @bhnd_pmu_paref_ldo_enable(%struct.bhnd_pmu_softc*, i32) #1

declare dso_local i32 @BPMU_UNLOCK(%struct.bhnd_pmu_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
